* variable.c (rb_path2class): don't raise NameError when the middle   constant of the path is not defined but defined on toplevel.   [ruby-core:41410] [Bug #5691]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@33909 b2dd03c8-39d4-4d8f-98ff-823fe69b080e